adds all project links and contact links

--- a/index.html
+++ b/index.html
@@ -83,21 +83,6 @@
       </div>
     </div>
   </div>
-  <div class="col xs12 m6 l3">
-    <div class="card">
-      <div class="card-image">
-        <img src="imgs/screenShot.png">
-        <span class="card-title">Tic-Tac-Toe</span>
-      </div>
-      <div class="card-content">
-        <p>Battle a friend in this awesome Ninja's vs. Pirates tic-tac-toe!</p>
-      </div>
-      <div class="card-action">
-        <a href="http://oceanographer-kevin-51204.bitballoon.com/">Play it here!</a>
-        <a href="https://github.com/mrogach2350/tic-tac-toe">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
  <!-- <div class="col s6 m3">
    <div class="card blue-grey darken-1">
      <div class="card-content white-text">
@@ -110,9 +95,9 @@
      </div>
    </div>
  </div> -->
-</div>
-<div id="row2" class="row">
- <div class="col s6 m3">
+<!-- </div> -->
+<!-- <div id="row2" class="row"> -->
+ <div class="col s6 m4 l3">
    <div class="card blue-grey darken-1">
      <div class="card-content white-text">
        <span class="card-title">My Iterators</span>
@@ -123,45 +108,62 @@
      </div>
    </div>
  </div>
- <div class="col s6 m3">
+ <div class="col s6 m4 l3">
    <div class="card blue-grey darken-1">
      <div class="card-content white-text">
-       <span class="card-title">Card Title</span>
-       <p>I am a very simple card. I am good at containing small bits of information.
-       I am convenient because I require little markup to use effectively.</p>
+       <span class="card-title">GeoQuakes</span>
+       <p>Lists all earthquakes with a maginitude more that 4.0, alongside a map of all the quake locations pinned.</p>
      </div>
      <div class="card-action">
-       <a href="#">GitHub Repo</a>
+       <a href="https://github.com/mrogach2350/geoquakes">GitHub Repo</a>
      </div>
    </div>
  </div>
- <div class="col s6 m3">
-   <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-       <span class="card-title">Card Title</span>
-       <p>I am a very simple card. I am good at containing small bits of information.
-       I am convenient because I require little markup to use effectively.</p>
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/screenShot.png">
+       <span class="card-title">Tic-Tac-Toe</span>
+     </div>
+     <div class="card-content">
+       <p>Battle a friend in this awesome Ninja's vs. Pirates tic-tac-toe!</p>
      </div>
      <div class="card-action">
-       <a href="#">GitHub Repo</a>
+       <a href="http://oceanographer-kevin-51204.bitballoon.com/">Play it here!</a>
+       <a href="https://github.com/mrogach2350/tic-tac-toe">GitHub Repo</a>
      </div>
    </div>
  </div>
- <div class="col s6 m3">
-   <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-       <span class="card-title">Card Title</span>
-       <p>I am a very simple card. I am good at containing small bits of information.
-       I am convenient because I require little markup to use effectively.</p>
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/screenShot2.png">
+       <span class="card-title black-text">Type Racer</span>
+     </div>
+     <div class="card-content">
+       <p>Race a friend across your keyboard to get to the center tile!
+        <br>On you mark.....get set.....TYPE!</p>
      </div>
      <div class="card-action">
-       <a href="#">GitHub Repo</a>
+       <a href="https://baliff-cheetah-35084.bitballoon.com/">Play it here!</a>
+       <a href="https://github.com/mrogach2350/racing_game">GitHub Repo</a>
      </div>
    </div>
  </div>
-</div>
-<div id="row3" class="row">
+<!-- </div> -->
+<!-- <div id="row3" class="row"> -->
   <div class="col s6 m3">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Express Routes Training</span>
+        <p>Training: Express Routing Practice</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/mrogach2350/express-routes-training">GitHub Repo</a>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="col s6 m3">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title">Card Title</span>
@@ -196,25 +198,14 @@
         <a href="#">GitHub Repo</a>
       </div>
     </div>
-  </div>
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
+  </div> -->
   </div>
 <footer class="footer">
   <div class="footerbox">
-    <img class="icon" src="imgs/GitHub-Mark-32px.png" alt="octocat" />
-    <img class="icon" src="imgs/Twitter_Logo_White_On_Blue.png" alt="tweeter" />
-    <img class="icon" src="imgs/In-2C-41px-R.png" alt="" />
+    <a href="https://github.com/mrogach2350"><img id="octocat" class="icon" src="imgs/GitHub-Mark-32px.png" alt="octocat" /></a>
+    <a href="#"><img id="tweeter" class="icon" src="imgs/Twitter_Logo_White_On_Blue.png" alt="tweeter" /></a>
+    <a href="https://www.linkedin.com/in/rogachevsky
+"><img id="linkedIn" class="icon" src="imgs/In-2C-41px-R.png" alt="" /></a>
   </div>
 </footer>
   </body>
