--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form> -->
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Contact Me</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="mailto:m.rogach@gmail.com">Contact Me</a></li>
+          <!-- <li><a href="#">Link</a></li> -->
+          <!-- <li><a href="#">Link</a></li> -->
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
