adds Personal API Card

--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
      </div>
    </div>
  </div>
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/screenShot3.png">
+       <span class="card-title black-text">Personal API</span>
+     </div>
+     <div class="card-content">
+       <p>Personal API includes Profile data and a MongoDB using mongoose.</p>
+     </div>
+     <div class="card-action">
+       <a href="https://arcane-woodland-15893.herokuapp.com/">Direct Link</a>
+       <a href="https://github.com/mrogach2350/express-personal-api">GitHub Repo</a>
+     </div>
+   </div>
+ </div>
 <!-- </div> -->
 <!-- <div id="row3" class="row"> -->
   <div class="col s6 m3">
