--- a/index.html
+++ b/index.html
@@ -82,20 +82,6 @@
       </div>
     </div>
   </div>
- <!-- <div class="col s6 m3">
-   <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-       <span class="card-title">Card Title</span>
-       <p>I am a very simple card. I am good at containing small bits of information.
-       I am convenient because I require little markup to use effectively.</p>
-     </div>
-     <div class="card-action">
-       <a href="#">GitHub Repo</a>
-     </div>
-   </div>
- </div> -->
-<!-- </div> -->
-<!-- <div id="row2" class="row"> -->
  <div class="col s6 m4 l3">
    <div class="card blue-grey darken-1">
      <div class="card-content white-text">
@@ -164,8 +150,21 @@
      </div>
    </div>
  </div>
-<!-- </div> -->
-<!-- <div id="row3" class="row"> -->
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/project1.png">
+       <span class="card-title black-text">WDI Event Board</span>
+     </div>
+     <div class="card-content">
+       <p>Project 1 - An event posting board designed for use by a team/class to post personal and public events.</p>
+     </div>
+     <div class="card-action">
+       <a href="https://enigmatic-shelf-29928.herokuapp.com/">Direct Link</a>
+       <a href="https://github.com/mrogach2350/project1">GitHub Repo</a>
+     </div>
+   </div>
+ </div>
   <div class="col s6 m3">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
@@ -177,43 +176,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">GitHub Repo</a>
-      </div>
-    </div>
-  </div> -->
-  </div>
+</div>
 <footer class="footer">
   <div class="footerbox">
     <a href="https://github.com/mrogach2350"><img id="octocat" class="icon" src="imgs/GitHub-Mark-32px.png" alt="octocat" /></a>
