adds twitter link to img

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <footer class="footer">
   <div class="footerbox">
     <a href="https://github.com/mrogach2350"><img id="octocat" class="icon" src="imgs/GitHub-Mark-32px.png" alt="octocat" /></a>
-    <a href="#"><img id="tweeter" class="icon" src="imgs/Twitter_Logo_White_On_Blue.png" alt="tweeter" /></a>
+    <a href="https://twitter.com/RogachM"><img id="tweeter" class="icon" src="imgs/Twitter_Logo_White_On_Blue.png" alt="tweeter" /></a>
     <a href="https://www.linkedin.com/in/rogachevsky
 "><img id="linkedIn" class="icon" src="imgs/In-2C-41px-R.png" alt="" /></a>
   </div>
