removes unneeded cards

--- a/index.html
+++ b/index.html
@@ -34,76 +34,24 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Git Repos<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a class="link" href="https://github.com/mrogach2350/functions-training.git">Functions</a></li>
               <li><a class="link" href="https://github.com/mrogach2350/jquery-events-training">jQuery Events</a></li>
-              <li><a class="link" href="https://github.com/mrogach2350/tic-tac-toe">Tic-Tac-Toe</a></li>
               <li><a class="link" href="https://github.com/mrogach2350/building-js-iterators-lab">My Iterators</a></li>
               <li><a class="link" href="https://github.com/mrogach2350/geoquakes">GeoQuakes</a></li>
+              <li><a class="link" href="https://github.com/mrogach2350/express-routes-training">Express Routes Training</a></li>
             </ul>
           </li>
         </ul>
-        <!-- <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form> -->
         <ul class="nav navbar-nav navbar-right">
           <li><a href="mailto:m.rogach@gmail.com">Contact Me</a></li>
-          <!-- <li><a href="#">Link</a></li> -->
-          <!-- <li><a href="#">Link</a></li> -->
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 </nav>
 <div id="row1" class="row">
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Functions</span>
-        <p>Training - Javascript Functions</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/mrogach2350/functions-training">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">jQuery</span>
-        <p>Training: DOM Events and jQuery</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/mrogach2350/jquery-events-training">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
- <div class="col s6 m4 l3">
-   <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-       <span class="card-title">My Iterators</span>
-       <p>Building Iterator Methods!</p>
-     </div>
-     <div class="card-action">
-       <a href="https://github.com/mrogach2350/building-js-iterators-lab">GitHub Repo</a>
-     </div>
-   </div>
- </div>
- <div class="col s6 m4 l3">
-   <div class="card blue-grey darken-1">
-     <div class="card-content white-text">
-       <span class="card-title">GeoQuakes</span>
-       <p>Lists all earthquakes with a maginitude more that 4.0, alongside a map of all the quake locations pinned.</p>
-     </div>
-     <div class="card-action">
-       <a href="https://github.com/mrogach2350/geoquakes">GitHub Repo</a>
-     </div>
-   </div>
- </div>
  <div class="col xs12 m6 l3">
    <div class="card">
      <div class="card-image">
@@ -165,17 +113,6 @@
      </div>
    </div>
  </div>
-  <div class="col s6 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Express Routes Training</span>
-        <p>Training: Express Routing Practice</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/mrogach2350/express-routes-training">GitHub Repo</a>
-      </div>
-    </div>
-  </div>
 </div>
 <footer class="footer">
   <div class="footerbox">
