adds hangman game card

--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
      </div>
    </div>
  </div>
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/project1.png">
+       <span class="card-title black-text">ng-Hangman</span>
+     </div>
+     <div class="card-content">
+       <p>Angular Hangman. Front-end hangman game built with Angular. Can you save stick-man from the noose?</p>
+     </div>
+     <div class="card-action">
+       <a href="http://operator-bear-15870.bitballoon.com/">Direct Link</a>
+       <a href="https://github.com/mrogach2350/ng-hangman">GitHub Repo</a>
+     </div>
+   </div>
+ </div>
 </div>
 <footer class="footer">
   <div class="footerbox">
