adds image to hangman card

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
  <div class="col xs12 m6 l3">
    <div class="card">
      <div class="card-image">
-       <img src="imgs/project1.png">
+       <img src="imgs/hangman.png">
        <span class="card-title black-text">ng-Hangman</span>
      </div>
      <div class="card-content">
