adds Angular Gist link to dropdown

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <li><a class="link" href="https://github.com/mrogach2350/building-js-iterators-lab">My Iterators</a></li>
               <li><a class="link" href="https://github.com/mrogach2350/geoquakes">GeoQuakes</a></li>
               <li><a class="link" href="https://github.com/mrogach2350/express-routes-training">Express Routes Training</a></li>
+              <li><a href="https://gist.github.com/mrogach2350/eb47e9edcf6492504020c9c299d724bb">Angular App Gist</a></li>
             </ul>
           </li>
         </ul>
