adds card for Is It Rotten app

--- a/index.html
+++ b/index.html
@@ -121,11 +121,29 @@
        <span class="card-title black-text">ng-Hangman</span>
      </div>
      <div class="card-content">
-       <p>Angular Hangman. Front-end hangman game built with Angular. Can you save stick-man from the noose?</p>
+       <p>Angular Hangman. Front-end hangman game built with Angular.
+         Can you save stick-man from the noose?</p>
      </div>
      <div class="card-action">
        <a href="http://operator-bear-15870.bitballoon.com/">Direct Link</a>
        <a href="https://github.com/mrogach2350/ng-hangman">GitHub Repo</a>
+     </div>
+   </div>
+ </div>
+ <div class="col xs12 m6 l3">
+   <div class="card">
+     <div class="card-image">
+       <img src="imgs/hangman.png">
+       <span class="card-title black-text">Is It Rotten?</span>
+     </div>
+     <div class="card-content">
+       <p>Angular front-end allows the user to search for films and then displays the
+         films IMDB and Rotten Tomatoes information.  <br>
+         Great way to make sure movie night isn't spoiled by a rotten flick.</p>
+     </div>
+     <div class="card-action">
+       <a href="http://pump-attendant-rabbit-48751.bitballoon.com/">Direct Link</a>
+       <a href="https://github.com/mrogach2350/is-it-rotten">GitHub Repo</a>
      </div>
    </div>
  </div>
