adds images to is it rotten card

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
  <div class="col xs12 m6 l3">
    <div class="card">
      <div class="card-image">
-       <img src="imgs/hangman.png">
+       <img src="imgs/isitrotten.png">
        <span class="card-title black-text">Is It Rotten?</span>
      </div>
      <div class="card-content">
