--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!--Materialize CDN-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <!-- Styles -->
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
     <!-- Scripts -->
@@ -152,8 +152,7 @@
   <div class="footerbox">
     <a href="https://github.com/mrogach2350"><img id="octocat" class="icon" src="imgs/GitHub-Mark-32px.png" alt="octocat" /></a>
     <a href="https://twitter.com/RogachM"><img id="tweeter" class="icon" src="imgs/Twitter_Logo_White_On_Blue.png" alt="tweeter" /></a>
-    <a href="https://www.linkedin.com/in/rogachevsky
-"><img id="linkedIn" class="icon" src="imgs/In-2C-41px-R.png" alt="" /></a>
+    <a href="https://www.linkedin.com/in/rogachevsky"><img id="linkedIn" class="icon" src="imgs/In-2C-41px-R.png" alt="" /></a>
   </div>
 </footer>
   </body>
