merges in new features to master branch

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
     <!-- Scripts -->
       <script type="text/javascript" src="js/app.js"></script>
-    <title></title>
+    <title>Rogachevsky</title>
   </head>
   <body>
+
     <ul id="slide-out" class="side-nav fixed">
         <li><div class="userView">
         </div></li>
@@ -43,6 +44,7 @@
       </div>
 
       <hr>
+
       <div class="aboutMe white-text">
         <h5>About Me</h5>
         <p class="aboutMe">
@@ -88,7 +90,9 @@
 
 
       <hr>
+
       <h3 class="white-text">Projects</h3>
+
       <div class="card">
         <a name="rpgLoot"></a>
         <div class="card-image waves-effect waves-block waves-light">
@@ -148,12 +152,5 @@
         </div>
       </div>
     </main>
-
-
-  <!-- <footer class="page-footer black">
-    <div class="container">
-    <a class="white-text right" href="#!">More Links</a>
-    </div>
-  </footer> -->
   </body>
 </html>
