adds resume to homepage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="https://github.com/mrogach2350"><i class="waves-effect fa fa-github fa-2x"></i> Collaborate</a></li>
         <li><a href="https://www.linkedin.com/in/rogachevsky"><i class="waves-effect fa fa-linkedin-square fa-2x"></i> Connect</a></li>
         <li><a href="mailto:m.rogach@gmail.com"><i class="waves-effect fa fa-envelope fa-2x"></i> Contact</a></li>
+        <li><a href="assets/resume.pdf"><i class="waves-effect fa fa-file-pdf-o fa-2x"></i> CV</a></li>
         <li><div class="divider"></div></li>
         <li><a class="subheader">Projects</a></li>
         <li><a href="#rpgLoot"><i class="waves-effect fa fa-shield fa-2x"></i> rpgLoot</a></li>
@@ -41,6 +42,7 @@
           <a class="navLink col hidden" href="https://github.com/mrogach2350"><h4><i class="fa fa-github fa-1x"></i> Collaborate</h4></a>
           <a class="navLink col hidden" href="https://www.linkedin.com/in/rogachevsky"><h4><i class="fa fa-linkedin-square fa-1x"></i> Connect</h4></a>
           <a class="navLink col hidden" href="mailto:m.rogach@gmail.com"><h4><i class="fa fa-envelope fa-1x"></i> Contact</h4></a>
+          <a class="navLink col hidden" href="assets/resume.pdf"><h4><i class="fa fa-file-pdf-o fa-1x"></i> CV</h4></a>
       </div>
 
       <hr>
