--- a/index.html
+++ b/index.html
@@ -95,63 +95,78 @@
 
       <h3 class="white-text">Projects</h3>
 
-      <div class="card">
-        <a name="rpgLoot"></a>
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="imgs/rpgLootImg.png">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator">rpgLoot<i class="material-icons right">more_vert</i></span>
-          <p><a href="http://rpgloot.meteorapp.com/">Direct Link</a>  ||  <a href="https://github.com/mrogach2350/rpgLoot">GitHub Repo</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title">rpgLoot<i class="material-icons right">close</i></span>
-          <h5>Tech: Meteor, BlazeJS.</h5>
-          <h6> Solo project developed in 6 days.
-              Development time includes time learning Meteor.
-              This application functions as a treasure distribution tool with
-              emphasis on cross platform compatibility and instant,
-              seamless responses.</h6>
-        </div>
-      </div>
-
-      <div class="card">
-        <a name="viewFinder"></a>
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="imgs/viewFinderImg.png">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator">ViewFinder<i class="material-icons right">more_vert</i></span>
-          <p><a href="https://view-finder.herokuapp.com/">Direct Link</a>  ||  <a href="https://github.com/mrogach2350/ViewFinder">GitHub Repo</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title">ViewFinder<i class="material-icons right">close</i></span>
-          <h5>Tech: Ruby on Rails, MaterializeCSS, Mapbox, Cloudinary.</h5>
-          <h6>
-             Developed with three other developers over the course of 7 days.
-             Our team was able to ideate, plan, and develop a full stack application for sharing
-             location based photography in San Francisco.
-             This application had special emphasis on mobile compatibility. </h6>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="http://rpgloot.meteorapp.com/"><img src="imgs/rpgLootImg.png"></a>
+          </div>
+          <div class="card-content">
+            <div class="row">
+              <div class="col s6">
+              <span class="card-title">rpgLoot <a href="https://github.com/mrogach2350/rpgLoot"><i class="fa fa-github right"></i></a></span>
+              <h6>Solo project developed in 6 days.
+                Development time includes time learning Meteor.
+                This application functions as a treasure distribution tool with
+                emphasis on cross platform compatibility and instant,
+                seamless responses.</h6>
+              </div>
+              <div class="col s6">
+                <ul class="cardList">
+                  <li class="skills">Meteor</li>
+                  <li class="skills">BlazeJS</li>
+                </ul>
+              </div>
+            </div>
         </div>
       </div>
 
-      <div class="card">
-        <a name="vagabond"></a>
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="imgs/vagabondImg.png">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="https://view-finder.herokuapp.com/"><img src="imgs/viewFinderImg.png"></a>
+          </div>
+          <div class="card-content">
+            <div class="row">
+              <div class="col s6">
+                <span class="card-title">ViewFinder <a href="https://github.com/mrogach2350/ViewFinder"><i class="fa fa-github right"></i></a></span>
+                <h6>
+                  Developed with three other developers over the course of 7 days.
+                  Our team was able to ideate, plan, and develop a full stack application for sharing
+                  location based photography in San Francisco.
+                  This application had special emphasis on mobile compatibility. </h6>
+              </div>
+              <div class="col s6">
+                <ul class="cardList">
+                  <li class="skills">Ruby on Rails</li>
+                  <li class="skills">MaterializeCSS</li>
+                  <li class="skills">Mapbox</li>
+                  <li class="skills">Cloudinary</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-content">
-          <span class="card-title activator">Vagabond<i class="material-icons right">more_vert</i></span>
-          <p><a href="https://vagabond-internauts.herokuapp.com/">Direct Link</a>  ||  <a href="https://github.com/mrogach2350/internauts-project-vagabond">GitHub Repo</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title">Vagabond<i class="material-icons right">close</i></span>
-          <h5>Tech: Ruby on Rails, Flexbox, Mapbox.</h5>
-          <h6>
-             Developed with three other developers.
-             Our client requested a travel tip app aimed at children.
-             We created a colorful, easy to use app over the course of 5 days.</h6>
-        </div>
+
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="https://vagabond-internauts.herokuapp.com/"><img src="imgs/vagabondImg.png"></a>
+          </div>
+          <div class="card-content">
+            <div class="row">
+              <div class="col s6">
+                <span class="card-title">Vagabond <a href="https://github.com/mrogach2350/internauts-project-vagabond"><i class="fa fa-github right"></i></a></span>
+                <h6>
+                  Developed with three other developers.
+                  Our client requested a travel tip app aimed at children.
+                  We created a colorful, easy to use app over the course of 5 days.</h6>
+              </div>
+              <div class="col s6">
+                <ul class="cardList">
+                  <li class="skills">Ruby on Rails</li>
+                  <li class="skills">Flexbox</li>
+                  <li class="skills">Mapbox</li>
+                </ul>
+              </div>
+            </div>
+          </div>
       </div>
     </main>
   </body>
