--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li class="skills">MongoDB</li>
         </ul>
         <ul class="list col s6 l3">
-          <li class="skill-header"> Engines </li>
+          <li class="skill-header"> Full-Stack/Other </li>
           <li class="skills">Meteor</li>
           <li class="skills">Ember</li>
         </ul>
